# shortify

./: LICENSE  README.md  pyproject.toml  shortify.py
